attempt to fix svg icon-close (not visible on Safari)

--- a/css/styles.css
+++ b/css/styles.css
@@ -179,13 +179,11 @@ img {
                 fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close {
-    
-}
+
 .icon-close {
     width: 8px;
     height: 8px;
-    -webkit-transform: translateZ(0);
+    /* -webkit-transform: translateZ(0); */
 }
 
 .mob-list {
@@ -744,9 +742,6 @@ img {
     margin-right: auto;
 }
 
-.footer-content {
-
-}
 
 .logo-footer {
     color: #F4F4FD;
